--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
     <name>detect_recovery</name>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <description>
 
         This package provides a recovery behavior for the navigation stack that attempts to clear space by performing a 360 degree rotation of the robot.
@@ -10,7 +10,7 @@
     </description>
     <author>An Chuanxu</author>
     <author>chuanxu@iscas.ac.cn</author>
-    <maintainer email="nefu.anchuanxu@gmail.com">David V. Lu!!</maintainer>
+    <maintainer email="nefu.anchuanxu@gmail.com">chuanxu</maintainer>
     <license>BSD</license>
     <url>http://wiki.ros.org/detect_recovery</url>
 
